// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds admin get moderation actions view gets all moderation actions for a record. 1`] = `
Array [
  Object {
    "action": "com.atproto.admin.defs#flag",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "did:example:admin",
    "id": 2,
    "reason": "X",
    "resolvedReportIds": Array [
      1,
    ],
    "reversal": Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "createdBy": "did:example:admin",
      "reason": "X",
    },
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectBlobCids": Array [],
  },
]
`;

exports[`pds admin get moderation actions view gets all moderation actions for a repo. 1`] = `
Array [
  Object {
    "action": "com.atproto.admin.defs#flag",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "did:example:admin",
    "id": 6,
    "reason": "X",
    "resolvedReportIds": Array [
      3,
    ],
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectBlobCids": Array [],
  },
  Object {
    "action": "com.atproto.admin.defs#acknowledge",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "did:example:admin",
    "id": 3,
    "reason": "X",
    "resolvedReportIds": Array [],
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectBlobCids": Array [],
  },
  Object {
    "action": "com.atproto.admin.defs#flag",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "did:example:admin",
    "id": 2,
    "reason": "X",
    "resolvedReportIds": Array [
      1,
    ],
    "reversal": Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "createdBy": "did:example:admin",
      "reason": "X",
    },
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(1)",
      "uri": "record(1)",
    },
    "subjectBlobCids": Array [],
  },
]
`;

exports[`pds admin get moderation actions view gets all moderation actions. 1`] = `
Array [
  Object {
    "action": "com.atproto.admin.defs#acknowledge",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "did:example:admin",
    "id": 7,
    "reason": "X",
    "resolvedReportIds": Array [],
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectBlobCids": Array [],
  },
  Object {
    "action": "com.atproto.admin.defs#flag",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "did:example:admin",
    "id": 6,
    "reason": "X",
    "resolvedReportIds": Array [
      3,
    ],
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(1)",
    },
    "subjectBlobCids": Array [],
  },
  Object {
    "action": "com.atproto.admin.defs#flag",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "did:example:admin",
    "id": 5,
    "reason": "X",
    "resolvedReportIds": Array [],
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectBlobCids": Array [],
  },
  Object {
    "action": "com.atproto.admin.defs#takedown",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "did:example:admin",
    "id": 4,
    "reason": "X",
    "resolvedReportIds": Array [],
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(1)",
      "uri": "record(1)",
    },
    "subjectBlobCids": Array [],
  },
  Object {
    "action": "com.atproto.admin.defs#acknowledge",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "did:example:admin",
    "id": 3,
    "reason": "X",
    "resolvedReportIds": Array [],
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(2)",
      "uri": "record(2)",
    },
    "subjectBlobCids": Array [],
  },
  Object {
    "action": "com.atproto.admin.defs#flag",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "did:example:admin",
    "id": 2,
    "reason": "X",
    "resolvedReportIds": Array [
      1,
    ],
    "reversal": Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "createdBy": "did:example:admin",
      "reason": "X",
    },
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(3)",
      "uri": "record(3)",
    },
    "subjectBlobCids": Array [],
  },
  Object {
    "action": "com.atproto.admin.defs#flag",
    "createLabelVals": Array [
      "repo-action-label",
    ],
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "did:example:admin",
    "id": 1,
    "reason": "test",
    "resolvedReportIds": Array [],
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(2)",
    },
    "subjectBlobCids": Array [],
  },
]
`;
